@@ -1,0 +1,30 @@
+###################
+ Utility Functions
+###################
+
+****************************
+ pythresh.utils.rank module
+****************************
+
+.. automodule:: pythresh.utils.data
+    :members:
+    :exclude-members: _cdf_metric, _clust_metric, _equi_rank, _equi_sort, _LK_metric
+    :undoc-members:
+    :show-inheritance:
+    :inherited-members:
+
+*****************
+ Module contents
+*****************
+
+.. automodule:: pythresh.utils
+   :members:
+   :undoc-members:
+   :show-inheritance:
+   :inherited-members:
+
+.. rubric:: References
+
+.. bibliography::
+   :cited:
+   :labelprefix:
